# settings-system

./: README.md  meson.build
.github/workflows/: main.yml
data/: meson.build  system.metainfo.xml.in
debian/: changelog  control
po/: ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  az.po  be.po  bg.po  bh.po  bn.po  bs.po  btk.po  ca.po  ckb.po  cs.po  cu.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  (+58 more)
po/extra/: aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  en_AU.po  (+158 more)
src/: meson.build
src/Utils/: ARMPartDecoder.vala
src/Views/: FirmwareReleaseView.vala  FirmwareView.vala  HardwareView.vala  OperatingSystemView.vala
